openai-codex/overlay/prod/openai-ingress-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress-openai-server
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - openai-server-192-168-3-130.traefik.me
    secretName: openai-tls
  rules:
  - host: openai-server-192-168-3-130.traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openai-server
            port:
              number: 5000
